Added main activity

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HearthstoneCards</string>
+    <string name="hearthstone">Hearthstone</string>
 </resources>
