Adding filters implementation on MainActivity

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">HearthstoneCards</string>
     <string name="hearthstone">Hearthstone</string>
+    <string name="classes_label">Classes</string>
+    <string name="sets_label">Sets</string>
+    <string name="types_label">Types</string>
+    <string name="faction_label">Factions</string>
+    <string name="qualities_label">Qualities</string>
+    <string name="races_label">Races</string>
 </resources>
