--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="faction_label">Factions</string>
     <string name="qualities_label">Qualities</string>
     <string name="races_label">Races</string>
+    <string name="generic_error">Ocorreu um erro. Tente novamente mais tarde.</string>
 </resources>
